--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "API_URL", "\"https://newsapi.org/v2/\"")
+        buildConfigField("String", "API_KEY", "\"6c2fdaf342d344379c9f059a86415966\"")
     }
 
     buildTypes {
